[package]
name = "async_message_dispatcher"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A library to make dispatching messages to asynchronous handlers easier."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.68", optional = true }
tokio = { version = "1.28.0", features = ["rt"], optional = true }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["rt", "macros"] }

[features]
utils = ["dep:tokio", "dep:async-trait"]
